--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 
 
 This archive contains the distribution Dist-Zilla-Plugin-ReportVersions-Tiny,
-version 1.05:
+version 1.06:
 
   reports dependency versions during testing
 
-This software is copyright (c) 2012 by Daniel Pittman.
+This software is copyright (c) 2012 by Olivier Mengue.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
